[package]
name = "twitter-and-me"
version = "0.1.0"
authors = ["Kenkou Nakamura <knakamura@indeed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json", "gzip"] }
tokio = { version = "0.2.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.50"
base64 = "0.12.0"
log = "0.4.8"
simple_logger = "1.6.0"
